# fabmo-loom

./: .gitignore  AGENTS.md  INTENT.md  NOTICE  QUICKSTART.md  README.md  package-lock.json  package.json
adapters/: terrain.js
app/: assembly3d.mjs  catalog.mjs  fonts.mjs  glyphs.mjs  index.html  intent.mjs  main.js  runtime.mjs  shape.mjs  sim.mjs  svg.mjs  terrain-fetch.mjs  test-live.mjs  test.mjs  texture-kernel.mjs  theme-bridge.css  vcarve-surface.mjs  view3d.mjs  weave.mjs
examples/: first-job.mjs
examples/engraver/: README.md  app.js  index.html  pipeline.mjs  test.mjs  text-to-regions.mjs
intent/: invite-cli.mjs  invites.js  replay.mjs  server.js  step-schema.js
ir/: arc-fit.js  job.js  moves.js  placement.js  verify.js
strategies/: bore.js  chamfer.js  pocket.js  profile.js  rest.js  surface-raster.js  tool-select.js
test/: arc-fit-test.mjs  bore-test.mjs  browser-assembly-test.mjs  browser-chips-test.mjs  browser-step-test.mjs  browser-terrain-test.mjs  chamfer-detect-test.mjs  chamfer-test.mjs  diff-test.mjs  e2e-demo.mjs  intent-apply-test.mjs  intent-live-test.mjs  invite-test.mjs  pocket-test.mjs  profile-test.mjs  rest-test.mjs  step-job-test.mjs  step-real-test.mjs  surface-raster-test.mjs  tool-select-test.mjs  verify-test.mjs
test/diff/: Cargo.toml
test/diff/src/: main.rs
test/fixtures/: test-part-v2.stp
tools/: sync-from-seams.sh  texture-sheet.html
